Fix from Sebas: Remove ugly horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .main-container {
   height: 113vh;
-  width: 100vw;
+  width: 100%;
   background-image: url("https://agrinews.tv/agrinewscampus/wp-content/uploads/2024/09/fondo-mas.jpg");
   background-repeat: no-repeat;
   background-position: bottom;
